--- a/template-user26.yaml
+++ b/template-user26.yaml
@@ -12,7 +12,7 @@ parameters:
   displayName: orizon-defb's Name
   description: orizon-defb for Test Drive Access
   required: true
-  value: orizon-defb
+  value: <orizon-defb>
 objects:
 - apiVersion: v1
   kind: DeploymentConfig
